src/test/06-Errors/error-auto-void.txt
error-auto-void.ck:2:9: error: cannot infer 'auto' type from 'void' type
[2] void => auto foo;
            ^
